@@ -1,3 +1,5 @@
+02.feb (la)
+      - improve MusicXML import of clefs
 01.feb (la)
       - fix #8974: Rest entry shortcut does not work in Voice 2
       - fix #9002: Reset Position doesn't affect tuplet bracket
